2006-03-28  Martin Hunt  <hunt@redhat.com>

	* testsuite/buildok/syscall.stp: Update so
	it works again.

2006-03-16 Tom Zanussi  <zanussi@us.ibm.com>

	* configure.ac: Revert relayfs version check.
	* configure: Reverted.
	* translate.cxx (compile_pass): Remove relayfs include path.

2006-03-15 Tom Zanussi  <zanussi@us.ibm.com>

	* configure.ac: Add check for relayfs version.
	* configure: Regenerated.
	* stp_check.in: Remove bundled relayfs loading/compilation, add
	check for relay (vs relayfs).

2006-03-13  Josh Stone  <joshua.i.stone@intel.com>

	* safety/safety.py: Support IA64 disassembly matching.
	* safety/data/opcodes-ia64: new opcode rules for IA64.
	* safety/data/references: Add references used by example scripts
	when compiled for IA64.

2006-03-13  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (emit_globals): Tag globals, especially the locks,
	as __cacheline_aligned.

2006-03-09  Frank Ch. Eigler  <fche@elastic.org>

	* translate.cxx (emit_locks): Emit dummy references to unlock_ ...
	(emit_module_init): ... and probe_point.

2006-03-06  Frank Ch. Eigler  <fche@elastic.org>

	PR 2425
	* staptree.cxx (varuse_collecting_visitor::visit_embeddedcode):
	Realize that $var-setter functions have side-effects.
	* testsuite/transok/tval-opt.stp: New test.

2006-03-06  Martin Hunt  <hunt@redhat.com>

	* buildrun.cxx (run_pass): Add "-u username".
	* stapfuncs.5.in: Document system(). 

2006-03-06  Frank Ch. Eigler  <fche@elastic.org>

	* stapex.5.in: Use \[aq] for plain single quotes for encoding
	variation tolerance.

2006-03-03  Josh Stone  <joshua.i.stone@intel.com>

	* main.cxx (main): search forward for dashes in the kernel release,
	to work properly with release names with more than one dash.  Also
	* parse.cxx (eval_pp_conditional): ditto
	* tapsets.cxx (profile_derived_probe::profile_derived_probe): ditto
	* safety/safety.py (StaticSafety::__build_search_suffixes): ditto,
	and add copyright & GPL tag

	PR 2390